--- a/ux/.env.development
+++ b/ux/.env.development
@@ -1,11 +1,11 @@
 # 页面标题
-VUE_APP_TITLE = campus
+VUE_APP_TITLE = WF
 
 # 开发环境配置
 ENV = 'development'
 
 # 校园信息墙/开发环境
-VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_API = '/api'
 
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
