--- a/ux/package.json
+++ b/ux/package.json
@@ -1,7 +1,7 @@
 {
   "name": "IMaoTai",
   "version": "1.1.0",
-  "description": "campus-imaotai",
+  "description": "WF",
   "author": "废废",
   "license": "MIT",
   "scripts": {
@@ -33,7 +33,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/oddfar/campus-imaotai"
+    "url": "https://github.com/WFLJQ/fly"
   },
   "dependencies": {
     "@riophae/vue-treeselect": "0.4.0",
