--- a/fly-imaotai/pom.xml
+++ b/fly-imaotai/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.wf.fly</groupId>
         <artifactId>fly</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <groupId>com.wf.fly</groupId>
     <artifactId>fly-imaotai</artifactId>
