--- a/ux/.env.development
+++ b/ux/.env.development
@@ -4,8 +4,8 @@ VUE_APP_TITLE = WF
 # 开发环境配置
 ENV = 'development'
 
-# 校园信息墙/开发环境
-VUE_APP_BASE_API = '/api'
+# 开发环境
+VUE_APP_BASE_API = 'http://localhost:8080/api'
 
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
