--- a/fly-imaotai/src/main/resources/application.properties
+++ b/fly-imaotai/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8080
-spring.application.name=fly
+server.port=9002
+spring.application.name=fly-imaotai
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://47.103.52.239:3306/fly?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
