--- a/fly-gateway/src/main/resources/application.properties
+++ b/fly-gateway/src/main/resources/application.properties
@@ -2,11 +2,18 @@ server.port=8080
 spring.application.name=fly-gateway
 
 spring.cloud.gateway.routes[0].id=system-route
-spring.cloud.gateway.routes[0].uri=http://localhost:9001
-spring.cloud.gateway.routes[0].predicates[0]=Path=/system/**
+spring.cloud.gateway.routes[0].uri=http://localhost:9001/
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/system/**
 
 spring.cloud.gateway.routes[1].id=imaotai-route
-spring.cloud.gateway.routes[1].uri=http://localhost:9002
-spring.cloud.gateway.routes[1].predicates[0]=Path=/imaotai/**
+spring.cloud.gateway.routes[1].uri=http://localhost:9002/
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/imaotai/**
+
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allow-credentials=true
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers[0]=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-methods[0]=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origin-patterns[0]=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].max-age=1800
+
 
 spring.main.web-application-type=reactive
