--- a/fly-system/pom.xml
+++ b/fly-system/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0.0</version>
     </parent>
 
+    <groupId>com.wf.system</groupId>
     <artifactId>fly-system</artifactId>
 
     <dependencies>
