--- a/fly-imaotai/pom.xml
+++ b/fly-imaotai/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>fly</artifactId>
         <version>1.0.0</version>
     </parent>
-    <groupId>com.wf.fly</groupId>
+    <groupId>com.wf.imaotai</groupId>
     <artifactId>fly-imaotai</artifactId>
 
     <dependencies>
@@ -55,6 +55,12 @@
         <dependency>
             <groupId>com.wf.fly</groupId>
             <artifactId>fly-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.3.2</version>
         </dependency>
 
     </dependencies>
