--- a/fly-imaotai/src/main/resources/application.properties
+++ b/fly-imaotai/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:mysql://47.103.52.239:3306/fly?useUnicode=true&charac
 spring.datasource.username=root
 spring.datasource.password=wangfei1022
 server.servlet.context-path=/api
+
+mybatis-plus.mapper-locations=classpath:/mappers/*.xml
