--- a/fly-imaotai/src/main/resources/application.properties
+++ b/fly-imaotai/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=wangfei1022
 server.servlet.context-path=/api
 
 mybatis-plus.mapper-locations=classpath:/mappers/*.xml
+logging.level.com.wf=DEBUG
