--- a/fly-imaotai/src/main/resources/log4j.properties
+++ b/fly-imaotai/src/main/resources/log4j.properties
@@ -1,17 +1,26 @@
-# ???????DEBUG
-log4j.rootLogger=DEBUG, stdout
+#将等级为DEBUG的日志信息输出到console和file这两个目的地，console和file的定义在下面的代码
+log4j.rootLogger=DEBUG,console,file
 
-# ?????
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+#控制台输出的相关设置
+log4j.appender.console = org.apache.log4j.ConsoleAppender
+log4j.appender.console.Target = System.out
+log4j.appender.console.Threshold=DEBUG
+log4j.appender.console.layout = org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=[%c]-%m%n
 
-# MyBatis ??????
-log4j.logger.com.ibatis=DEBUG
-log4j.logger.com.mybatis=DEBUG
-log4j.logger.com.mysql.jdbc=DEBUG
-log4j.logger.java.sql.Connection=DEBUG
-log4j.logger.java.sql.PreparedStatement=DEBUG
-log4j.logger.java.sql.ResultSet=DEBUG
+#文件输出的相关设置
+log4j.appender.file = org.apache.log4j.RollingFileAppender
+#下面的语句是将在项目目录里面一个名为log的文件夹下创建一个finnian.log的文件，文件里面就是输出的日志。
+log4j.appender.file.File=/log/fly-imaotai.log
+#单个文件最大值为10mb
+log4j.appender.file.MaxFileSize=10mb
+log4j.appender.file.Threshold=DEBUG
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=[%p][%d{yy-MM-dd}][%c]%m%n
+
+#日志输出级别
+log4j.logger.org.mybatis=DEBUG
+log4j.logger.java.sql=DEBUG
 log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.ResultSet=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG
