--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,16 @@
                 <artifactId>alibabacloud-dysmsapi20170525</artifactId>
                 <version>2.0.24</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>2.23.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.23.1</version>
+            </dependency>
 
             <!-- 通用工具-->
             <dependency>
