--- a/fly-imaotai/src/main/resources/application.properties
+++ b/fly-imaotai/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.datasource.password=wangfei1022
 server.servlet.context-path=/api
 
 mybatis-plus.mapper-locations=classpath:/mappers/*.xml
+#mybatis.config-location=classpath:mybatis-config.xml
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 logging.level.com.wf=DEBUG
