--- a/fly-imaotai/src/main/resources/application.properties
+++ b/fly-imaotai/src/main/resources/application.properties
@@ -10,3 +10,8 @@ mybatis-plus.mapper-locations=classpath:/mappers/*.xml
 #mybatis.config-location=classpath:mybatis-config.xml
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 logging.level.com.wf=DEBUG
+
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
