添加定向用户以及定时预约功能

--- a/fly-gateway/src/main/resources/application.properties
+++ b/fly-gateway/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/system/**
 
 spring.cloud.gateway.routes[1].id=imaotai-route
 spring.cloud.gateway.routes[1].uri=http://localhost:9002/
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/imaotai/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/imt/**
 
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allow-credentials=true
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers[0]=*
