--- a/fly-imaotai/pom.xml
+++ b/fly-imaotai/pom.xml
@@ -63,6 +63,15 @@
             <version>5.3.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
     </dependencies>
 
 
