--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,19 @@
                 <version>2.23.1</version>
             </dependency>
 
+            <!-- 阿里JSON解析器 -->
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>2.0.42</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>5.8.23</version>
+            </dependency>
+
             <!-- 通用工具-->
             <dependency>
                 <groupId>com.auth0</groupId>
