增加系统登录功能

--- a/fly-system/src/main/resources/application.properties
+++ b/fly-system/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:mysql://47.103.52.239:3306/fly?useUnicode=true&charac
 spring.datasource.username=root
 spring.datasource.password=wangfei1022
 server.servlet.context-path=/api
+
+wf.jwt.secret-key=Alphamilk
+wf.jwt.ttl=10800000
+wf.jwt.token-name=Authorization
