--- a/fly-system/src/main/resources/application.properties
+++ b/fly-system/src/main/resources/application.properties
@@ -6,6 +6,14 @@ spring.datasource.username=root
 spring.datasource.password=wangfei1022
 server.servlet.context-path=/api
 
+#logging.level.com.wf=DEBUG
+
 wf.jwt.secret-key=Alphamilk
 wf.jwt.ttl=10800000
 wf.jwt.token-name=Authorization
+
+
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
