--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,8 @@
         <fly.version>1.0.0</fly.version>
         <java-jwt.version>3.4.0</java-jwt.version>
         <java.version>1.8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <dependencyManagement>
