--- a/fly-common/pom.xml
+++ b/fly-common/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>json</artifactId>
         </dependency>
 
+        <!-- redis 缓存操作 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
