--- a/fly-imaotai/src/main/resources/application.properties
+++ b/fly-imaotai/src/main/resources/application.properties
@@ -15,3 +15,9 @@ pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.database=0
+# spring.redis.password =
+spring.redis.timeout=10s
