--- a/fly-imaotai/src/main/resources/application-prod.properties
+++ b/fly-imaotai/src/main/resources/application-prod.properties
@@ -9,7 +9,7 @@ server.servlet.context-path=/api
 mybatis-plus.mapper-locations=classpath:/mappers/*.xml
 #mybatis.config-location=classpath:mybatis-config.xml
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-logging.level.com.wf=DEBUG
+#logging.level.com.wf=DEBUG
 
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
