--- a/ux/.env.production
+++ b/ux/.env.production
@@ -5,4 +5,4 @@ VUE_APP_TITLE = WF
 ENV = 'production'
 
 # 校园信息墙/生产环境
-VUE_APP_BASE_API = 'http://47.103.52.239:8080/api'
+VUE_APP_BASE_API = 'http://www.wf-ljq.shop/api'
