--- a/fly-system/src/main/resources/application.properties
+++ b/fly-system/src/main/resources/application.properties
@@ -1,18 +1,7 @@
+spring.profiles.active=dev
 server.port=9001
 spring.application.name=fly-system
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.103.52.239:3306/fly?useUnicode=true&characterEncoding=utf8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=wangfei1022
 server.servlet.context-path=/api
-
-#logging.level.com.wf=DEBUG
-
-wf.jwt.secret-key=Alphamilk
-wf.jwt.ttl=10800000
-wf.jwt.token-name=Authorization
-
-
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
