--- a/fly-imaotai/src/main/resources/application.properties
+++ b/fly-imaotai/src/main/resources/application.properties
@@ -1,23 +1,10 @@
+spring.profiles.active=dev
 server.port=9002
 spring.application.name=fly-imaotai
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.103.52.239:3306/fly?useUnicode=true&characterEncoding=utf8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=wangfei1022
 server.servlet.context-path=/api
-
 mybatis-plus.mapper-locations=classpath:/mappers/*.xml
-#mybatis.config-location=classpath:mybatis-config.xml
-#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-logging.level.com.wf=DEBUG
 
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
-
-spring.redis.host=47.103.52.239
-spring.redis.port=6379
-spring.redis.database=0
-spring.redis.password=
-spring.redis.timeout=10s
