--- a/fly-system/src/main/resources/application-dev.properties
+++ b/fly-system/src/main/resources/application-dev.properties
@@ -1,12 +1,11 @@
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://47.103.52.239:3306/fly?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=wangfei1022
 
+logging.level.com.wf=DEBUG
 
-spring.redis.host=47.103.52.239
-spring.redis.port=6379
-spring.redis.database=0
-spring.redis.password=
-spring.redis.timeout=10s
+wf.jwt.secret-key=Alphamilk
+wf.jwt.ttl=10800000
+wf.jwt.token-name=Authorization
+
