--- a/fly-imaotai/pom.xml
+++ b/fly-imaotai/pom.xml
@@ -96,6 +96,12 @@
             <version>1.9.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
